Pre-processamento com Spacy e Script de leitura do dataset

--- a/src/preprocessing/NLTK/preprocess_NLTK.ipynb
+++ b/src/preprocessing/NLTK/preprocess_NLTK.ipynb
@@ -110,8 +110,7 @@
         }
       ],
       "source": [
-        "df = pd.read_csv('../../../data/IMDB Dataset.csv') # ajustar o caminho conforme for necessario\n",
-        "\n",
+        "df = pd.read_csv(\"data/raw/IMDB Dataset.csv\")\n",
         "\n",
         "print(df.head(10), '\\n')\n",
         "print(df.info(), '\\n')\n",
@@ -193,7 +192,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -239,7 +238,7 @@
         "    return ' '.join(tokens)\n",
         "\n",
         "df['processed_review'] = df['review'].apply(clean_dataFrame)\n",
-        "df.to_csv('../../../data/imdb_preprocessado.csv', index=False)\n",
+        "df.to_csv(\"data/processed/IMDB_cleaned_NLTK.csv\", index=False)\n",
         "print(df[['review', 'processed_review']].head())\n"
       ]
     }
