--- a/notebooks/exploratory/imdb_exploratory.ipynb
+++ b/notebooks/exploratory/imdb_exploratory.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "383e07b1",
    "metadata": {},
    "outputs": [
@@ -51,8 +51,7 @@
     "from wordcloud import WordCloud\n",
     "\n",
     "# 1. Leitura do dataset pre‑processado\n",
-    "\n",
-    "df = pd.read_csv('../../data/imdb_preprocessado.csv')"
+    "df = pd.read_csv(\"data/processed/IMDB_cleaned_NLTK.csv\", index=False)"
    ]
   },
   {
