Adição da vetorização e modelos clássicos

--- a/src/data/preprocessing/NLTK/Pre_processing_NLTK.ipynb
+++ b/src/data/preprocessing/NLTK/Pre_processing_NLTK.ipynb
@@ -1,8 +1,15 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Importação de Bibliotecas e Leitura do Dataset"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "dI3n1_mSc6m8"
       },
@@ -12,16 +19,16 @@
           "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package punkt to\n",
-            "[nltk_data]     C:\\Users\\guilh\\AppData\\Roaming\\nltk_data...\n",
+            "[nltk_data]     C:\\Users\\55119\\AppData\\Roaming\\nltk_data...\n",
             "[nltk_data]   Package punkt is already up-to-date!\n",
             "[nltk_data] Downloading package punkt_tab to\n",
-            "[nltk_data]     C:\\Users\\guilh\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers\\punkt_tab.zip.\n",
+            "[nltk_data]     C:\\Users\\55119\\AppData\\Roaming\\nltk_data...\n",
+            "[nltk_data]   Package punkt_tab is already up-to-date!\n",
             "[nltk_data] Downloading package stopwords to\n",
-            "[nltk_data]     C:\\Users\\guilh\\AppData\\Roaming\\nltk_data...\n",
+            "[nltk_data]     C:\\Users\\55119\\AppData\\Roaming\\nltk_data...\n",
             "[nltk_data]   Package stopwords is already up-to-date!\n",
             "[nltk_data] Downloading package wordnet to\n",
-            "[nltk_data]     C:\\Users\\guilh\\AppData\\Roaming\\nltk_data...\n",
+            "[nltk_data]     C:\\Users\\55119\\AppData\\Roaming\\nltk_data...\n",
             "[nltk_data]   Package wordnet is already up-to-date!\n"
           ]
         },
@@ -41,22 +48,21 @@
         "import numpy as np\n",
         "import re\n",
         "\n",
-        "# libs de PLN\n",
+        "# Biblioteca NLTK\n",
         "import nltk\n",
         "from nltk.corpus import stopwords\n",
         "from nltk.stem import WordNetLemmatizer\n",
         "from nltk.tokenize import word_tokenize\n",
         "\n",
-        "\n",
         "nltk.download('punkt')\n",
         "nltk.download('punkt_tab')\n",
         "nltk.download('stopwords')\n",
-        "nltk.download('wordnet')\n"
+        "nltk.download('wordnet')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -110,7 +116,7 @@
         }
       ],
       "source": [
-        "df = pd.read_csv(\"data/raw/IMDB Dataset.csv\")\n",
+        "df = pd.read_csv(\"../../../data/raw/IMDB Dataset.csv\")\n",
         "\n",
         "print(df.head(10), '\\n')\n",
         "print(df.info(), '\\n')\n",
@@ -121,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -148,14 +154,14 @@
             "                                                   review sentiment\n",
             "count                                               49582     49582\n",
             "unique                                              49582         2\n",
-            "top     One of the other reviewers has mentioned that ...  positive\n",
+            "top     No one expects the Star Trek movies to be high...  positive\n",
             "freq                                                    1     24884 \n",
             "\n"
           ]
         }
       ],
       "source": [
-        "#49.582 reviews em 50.000 linhas -> tem 418 duplicadas\n",
+        "# 49.582 reviews em 50.000 linhas -> tem 418 duplicadas\n",
         "df = df.drop_duplicates(subset='review').reset_index(drop=True)\n",
         "print(df.info(), '\\n')\n",
         "print(df.describe(), '\\n')"
@@ -192,7 +198,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -238,7 +244,7 @@
         "    return ' '.join(tokens)\n",
         "\n",
         "df['processed_review'] = df['review'].apply(clean_dataFrame)\n",
-        "df.to_csv(\"data/processed/IMDB_cleaned_NLTK.csv\", index=False)\n",
+        "df.to_csv(\"../../../data/processed/IMDB_cleaned_NLTK.csv\", index=False)\n",
         "print(df[['review', 'processed_review']].head())\n"
       ]
     }
@@ -248,7 +254,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "base",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -262,7 +268,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.7"
+      "version": "3.13.1"
     }
   },
   "nbformat": 4,
